--- a/index.html
+++ b/index.html
@@ -753,8 +753,30 @@ function updateSelectionCounter(questionIndex, selectedCount, required) {
 </a>
 
 <a class="share-btn instagram" href="https://www.instagram.com" target="_blank">
-  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-    <path d="M224,202.66A53.34,53.34,0,1,0,277.34,256,53.38,53.38,0,0,0,224,202.66Zm124.71-41a54,54,0,0,0-30.56-30.56C297.9,124,224,124,224,124s-73.9,0-94.15,7.11a54,54,0,0,0-30.56,30.56C86.29,162.9,86.29,224,86.29,224s0,61.1,13,82.3a54,54,0,0,0,30.56,30.56C150.1,352,224,352,224,352s73.9,0,94.15-7.11a54,54,0,0,0,30.56-30.56c13-21.2,13-82.3,13-82.3S361.71,162.9,348.71,161.66ZM224,306.67A82.67,82.67,0,1,1,306.67,224,82.76,82.76,0,0,1,224,306.67Zm85.33-148.4a19.2,19.2,0,1,1,19.2-19.2A19.2,19.2,0,0,1,309.33,158.27Z"/>
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 448 512" fill="none">
+    <path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9 
+      114.9-51.3 114.9-114.9S287.6 141 224.1 141zm0 189.6c-41.2 0-74.7-33.5-74.7-74.7 
+      0-41.2 33.5-74.7 74.7-74.7s74.7 33.5 74.7 74.7c0 41.2-33.5 74.7-74.7 
+      74.7zm146.4-194.3c0 14.9-12 26.9-26.9 
+      26.9s-26.9-12-26.9-26.9 12-26.9 
+      26.9-26.9 26.9 12 26.9 26.9zm76.1 
+      27.2c-1.7-35.7-9.9-67.3-36.2-93.5S379.1 
+      0 343.4 1.7c-35.7-1.7-142.8-1.7-178.5 
+      0-35.7-1.7-67.3 9.9-93.5 36.2S0 
+      100.9 1.7 136.6c-1.7 35.7-1.7 142.8 
+      0 178.5-1.7 35.7 9.9 67.3 36.2 
+      93.5s57.8 37.9 93.5 36.2c35.7 
+      1.7 142.8 1.7 178.5 0 35.7 
+      1.7 67.3-9.9 93.5-36.2s37.9-57.8 
+      36.2-93.5c1.7-35.7 1.7-142.8 
+      0-178.5zM398.8 388c-7.8 19.6-22.9 
+      34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 
+      9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 
+      9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 
+      29.5-11.7 99.5-9 132.1-9s102.7-2.6 
+      132.1 9c19.6 7.8 34.7 22.9 
+      42.6 42.6 11.7 29.5 9 99.5 9 
+      132.1s2.7 102.7-9 132.1z"/>
   </svg>
   Instagram
 </a>
