--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ function getData() {
   multipleChoice: false
 },
 {
-  question: "Em quais ocasiões você mais gosta de apreciar uma cerveja?",
+  question: "Em quais ocasiões você mais gosta de apreciar uma cerveja?(Escolha 3 momentos)",
   description: "Selecione as 3 principais ocasiões que combinam com o seu estilo.",
   multipleChoice: true,
   requiredChoices: 3,
