--- a/promocoes.html
+++ b/promocoes.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Aproveite as melhores promoções de cerveja no Esportanos. Cupons, ofertas e descontos exclusivos." />
-        <title>Promoções de Cerveja | Esportanos</title>
+        <title>Promoções de Cerveja</title>
       
         <!-- Fonte Inter para modernização -->
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
