--- a/index.html
+++ b/index.html
@@ -209,26 +209,21 @@ function getData() {
       antarctica: true
     };
 
-const questions = [
-  {
-    question: "Em qual desses municípios você costuma fazer suas compras de supermercado?",
-    options: [
-      { text: "Belford Roxo", scores: {} },
-      { text: "Campos dos Goytacazes", scores: {} },
-      { text: "Duque de Caxias", scores: {} },
-      { text: "Niterói", scores: {} },
-      { text: "Nova Iguaçu", scores: {} },
-      { text: "Petrópolis", scores: {} },
-      { text: "Rio de Janeiro", scores: {} },
-      { text: "São Gonçalo", scores: {} },
-      { text: "São João de Meriti", scores: {} },
-      { text: "Volta Redonda", scores: {} },
-      { text: "Outro(s)", scores: {} }
-    ],
-    multipleChoice: false
-  },
-];
-
+    const questions = [
+          { text: "Belford Roxo", scores: {} },
+          { text: "Campos dos Goytacazes", scores: {} },
+          { text: "Duque de Caxias", scores: {} },
+          { text: "Niterói", scores: {} },
+          { text: "Nova Iguaçu", scores: {} },
+          { text: "Outro(s)", scores: {} },
+          { text: "Petrópolis", scores: {} },
+          { text: "Rio de Janeiro", scores: {} },
+          { text: "São Gonçalo", scores: {} },
+          { text: "São João de Meriti", scores: {} },
+          { text: "Volta Redonda", scores: {} }
+        ],
+        multipleChoice: false
+      },
       {
   question: "Qual a sua faixa etária?",
   description: "Esta informação nos ajuda a personalizar ainda melhor suas recomendações.",
