--- a/index.html
+++ b/index.html
@@ -212,19 +212,20 @@ function getData() {
     const questions = [
     {
         question: "Em qual desses municipios você costuma fazer suas compras de supermercado?",
-        options: [
-                { text: "Belford Roxo", scores: {} },
-                { text: "Campos dos Goytacazes", scores: {} },
-                { text: "Duque de Caxias", scores: {} },
-                { text: "Niterói", scores: {} },
-                { text: "Nova Iguaçu", scores: {} },
-                { text: "Outro(s)", scores: {} },
-                { text: "Petrópolis", scores: {} },
+         options: [
                 { text: "Rio de Janeiro", scores: {} },
                 { text: "São Gonçalo", scores: {} },
+                { text: "Duque de Caxias", scores: {} },
+                { text: "Nova Iguaçu", scores: {} },
+                { text: "Belford Roxo", scores: {} },
+                { text: "Niterói", scores: {} },
+                { text: "Campos dos Goytacazes", scores: {} },
                 { text: "São João de Meriti", scores: {} },
-                { text: "Volta Redonda", scores: {} }
+                { text: "Volta Redonda", scores: {} },
+                { text: "Petrópolis", scores: {} },
+                { text: "Outro(s)", scores: {} }
               ],
+
 
         multipleChoice: false
       },
