--- a/promocoes.html
+++ b/promocoes.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Aproveite as melhores promoções de cerveja no Esportanos. Cupons, ofertas e descontos exclusivos." />
-        <title>Promoções de Cerveja</title>
+        <title>Promoções de Cerveja | Esportanos</title>
       
         <!-- Fonte Inter para modernização -->
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
@@ -168,6 +168,7 @@
         <section class="promo-section" data-category="coupon">
             <div class="section-header">
                 <h2>Seus Cupons</h2>
+                <a href="#" class="see-all">Ver todos <i class="fas fa-chevron-right" aria-hidden="true"></i></a>
             </div>
             <div class="coupons-container">
                 <div class="coupon">
@@ -189,7 +190,7 @@
                 <div class="coupon">
                     <div class="coupon-content">
                         <div class="coupon-brand">
-                            <img src="budweiser.jpg" alt="Budweiser" width="60" height="60" data-original-src="budweiser.jpg" onerror="this.onerror=null; this.classList.add('error'); this.src='data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'60\' height=\'60\'%3E%3Crect width=\'60\' height=\'60\' fill=\'%23f2f2f2\'/%3E%3Ctext x=\'50%25\' y=\'50%25\' dominant-baseline=\'middle\' text-anchor=\'middle\' font-family=\'sans-serif\' font-size=\'10\' fill=\'%23888\'%3EBudweiser%3C/text%3E%3C/svg%3E';">
+                            <img src="bud.jpg" alt="bud" width="60" height="60" data-original-src="bud.jpg" onerror="this.onerror=null; this.classList.add('error'); this.src='data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'60\' height=\'60\'%3E%3Crect width=\'60\' height=\'60\' fill=\'%23f2f2f2\'/%3E%3Ctext x=\'50%25\' y=\'50%25\' dominant-baseline=\'middle\' text-anchor=\'middle\' font-family=\'sans-serif\' font-size=\'10\' fill=\'%23888\'%3EBud%3C/text%3E%3C/svg%3E';">
                         </div>
                         <div class="coupon-details">
                             <h3>R$10 OFF</h3>
@@ -242,6 +243,7 @@
         <section class="promo-section missions-section" data-category="missions">
             <div class="section-header">
                 <h2>Missões Ativas</h2>
+                <a href="#" class="see-all">Ver todas <i class="fas fa-chevron-right" aria-hidden="true"></i></a>
             </div>
             <div class="missions-container">
                 <div class="mission-card">
@@ -294,6 +296,7 @@
         <section class="promo-section" data-category="recommendation">
             <div class="section-header">
                 <h2>Recomendado para Você</h2>
+                <a href="#" class="see-all">Ver todas <i class="fas fa-chevron-right" aria-hidden="true"></i></a>
             </div>
             <div class="profile-recommendations">
                 <div class="profile-badge">
@@ -390,7 +393,7 @@
         <section class="promo-section delivery-integration" data-category="integration">
             <div class="integration-card ze-delivery-section">
                 <div class="integration-content">
-                    <img src="ze-delivery-wide.png" alt="Zé Delivery" class="integration-logo" width="120" height="60" data-original-src="ze-delivery-wide.png" onerror="this.onerror=null; this.classList.add('error'); this.src='data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'120\' height=\'60\'%3E%3Crect width=\'120\' height=\'60\' fill=\'%23f2f2f2\'/%3E%3Ctext x=\'50%25\' y=\'50%25\' dominant-baseline=\'middle\' text-anchor=\'middle\' font-family=\'sans-serif\' font-size=\'12\' fill=\'%23888\'%3EZé Delivery%3C/text%3E</svg%3E';">
+                    <img src="ze-delivery-wide.jpg" alt="Zé Delivery" class="integration-logo" width="120" height="60" data-original-src="ze-delivery-wide.png" onerror="this.onerror=null; this.classList.add('error'); this.src='data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'120\' height=\'60\'%3E%3Crect width=\'120\' height=\'60\' fill=\'%23f2f2f2\'/%3E%3Ctext x=\'50%25\' y=\'50%25\' dominant-baseline=\'middle\' text-anchor=\'middle\' font-family=\'sans-serif\' font-size=\'12\' fill=\'%23888\'%3EZé Delivery%3C/text%3E</svg%3E';">
                     <div class="integration-info">
                         <h3>Receba em casa com<br>Zé Delivery</h3>
                         <p>Aplique automaticamente os<br>mesmos descontos do app</p>
