--- a/mercados.html
+++ b/mercados.html
@@ -113,7 +113,7 @@
         <!-- Header com navegação -->
         <header class="app-header">
             <div class="header-content">
-                <a href="Inicial.html" class="back-btn">
+                <a href="promocoes.html" class="back-btn">
                     <i class="fas fa-arrow-left"></i>
                 </a>
                 <h1>Mercados com Promoções</h1>
