--- a/promocoes.html
+++ b/promocoes.html
@@ -113,172 +113,172 @@
             </button>
         </div>
 
-        <!-- Seção de cupons -->
-        <section class="promo-section" data-category="coupon">
-            <div class="section-header">
-                <h2>Seus Cupons</h2>
+    <!-- Seção de cupons -->
+    <section class="promo-section" data-category="coupon">
+        <div class="section-header">
+          <h2>Seus Cupons</h2>
+        </div>
+        <div class="coupons-container">
+          <div class="coupon">
+            <div class="coupon-content">
+              <div class="coupon-brand">
+                <img src="brahma.jpg" alt="Brahma" width="60" height="60">
+              </div>
+              <div class="coupon-details">
+                <h3>20% OFF</h3>
+                <p>Em Brahma para todos os mercados</p>
+                <span class="coupon-expiry">Expira em 2 dias</span>
+              </div>
             </div>
-            <div class="coupons-container">
-                <div class="coupon">
-                    <div class="coupon-content">
-                        <div class="coupon-brand">
-                            <img src="brahma.jpg" alt="Brahma" width="60" height="60" data-original-src="brahma.jpg" onerror="this.onerror=null; this.classList.add('error'); this.src='data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'60\' height=\'60\'%3E%3Crect width=\'60\' height=\'60\' fill=\'%23f2f2f2\'/%3E%3Ctext x=\'50%25\' y=\'50%25\' dominant-baseline=\'middle\' text-anchor=\'middle\' font-family=\'sans-serif\' font-size=\'10\' fill=\'%23888\'%3EBrahma%3C/text%3E%3C/svg%3E';">
-                        </div>
-                        <div class="coupon-details">
-                            <h3>20% OFF</h3>
-                            <p>Em Brahma Duplo Malte</p>
-                            <span class="coupon-expiry">Expira em 2 dias</span>
-                        </div>
-                    </div>
-                    <div class="coupon-action">
-                        <button class="use-coupon">USAR</button>
-                    </div>
-                </div>
-                
-                <div class="coupon">
-                    <div class="coupon-content">
-                        <div class="coupon-brand">
-                            <img src="bud.jpg" alt="bud" width="60" height="60" data-original-src="bud.jpg" onerror="this.onerror=null; this.classList.add('error'); this.src='data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'60\' height=\'60\'%3E%3Crect width=\'60\' height=\'60\' fill=\'%23f2f2f2\'/%3E%3Ctext x=\'50%25\' y=\'50%25\' dominant-baseline=\'middle\' text-anchor=\'middle\' font-family=\'sans-serif\' font-size=\'10\' fill=\'%23888\'%3EBud%3C/text%3E%3C/svg%3E';">
-                        </div>
-                        <div class="coupon-details">
-                            <h3>R$10 OFF</h3>
-                            <p>Em compras acima de R$50</p>
-                            <span class="coupon-expiry">Expira hoje!</span>
-                        </div>
-                    </div>
-                    <div class="coupon-action">
-                        <button class="use-coupon urgent">USAR AGORA</button>
-                    </div>
-                </div>
-                
-                <div class="coupon new-coupon" data-category="exclusive">
-                    <div class="coupon-content">
-                        <div class="coupon-brand">
-                            <img src="corona.jpg" alt="Corona" width="60" height="60" data-original-src="corona.jpg" onerror="this.onerror=null; this.classList.add('error'); this.src='data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'60\' height=\'60\'%3E%3Crect width=\'60\' height=\'60\' fill=\'%23f2f2f2\'/%3E%3Ctext x=\'50%25\' y=\'50%25\' dominant-baseline=\'middle\' text-anchor=\'middle\' font-family=\'sans-serif\' font-size=\'10\' fill=\'%23888\'%3ECorona%3C/text%3E%3C/svg%3E';">
-                        </div>
-                        <div class="coupon-details">
-                            <div class="new-tag">NOVO</div>
-                            <h3>Leve 6, Pague 5</h3>
-                            <p>Em Corona Long Neck</p>
-                            <span class="coupon-expiry">Válido por 7 dias</span>
-                            <span class="exclusiva" style="display:none">Exclusiva</span>
-                        </div>
-                    </div>
-                    <div class="coupon-action">
-                        <button class="use-coupon">USAR</button>
-                    </div>
-                </div>
-
-                <div class="coupon" data-category="cashback">
-                    <div class="coupon-content">
-                        <div class="coupon-brand">
-                            <img src="patagonia.jpg" alt="Patagonia" width="60" height="60" data-original-src="patagonia.jpg" onerror="this.onerror=null; this.classList.add('error'); this.src='data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'60\' height=\'60\'%3E%3Crect width=\'60\' height=\'60\' fill=\'%23f2f2f2\'/%3E%3Ctext x=\'50%25\' y=\'50%25\' dominant-baseline=\'middle\' text-anchor=\'middle\' font-family=\'sans-serif\' font-size=\'10\' fill=\'%23888\'%3EPatagonia%3C/text%3E%3C/svg%3E';">
-                        </div>
-                        <div class="coupon-details">
-                            <h3>5% Cashback</h3>
-                            <p>Em Patagonia 600ml</p>
-                            <span class="coupon-expiry">Válido por 5 dias</span>
-                        </div>
-                    </div>
-                    <div class="coupon-action">
-                        <button class="use-coupon">USAR</button>
-                    </div>
-                </div>
+            <div class="coupon-action">
+              <button class="use-coupon" onclick="location.href='cupom-brahma.html'">USAR</button>
             </div>
-        </section>
+          </div>
+  
+          <div class="coupon">
+            <div class="coupon-content">
+              <div class="coupon-brand">
+                <img src="bud.jpg" alt="bud" width="60" height="60">
+              </div>
+              <div class="coupon-details">
+                <h3>R$10 OFF</h3>
+                <p>Em compras acima de R$50</p>
+                <span class="coupon-expiry">Expira hoje!</span>
+              </div>
+            </div>
+            <div class="coupon-action">
+              <button class="use-coupon urgent" onclick="location.href='cupom-bud.html'">USAR AGORA</button>
+            </div>
+          </div>
+  
+          <div class="coupon new-coupon" data-category="exclusive">
+            <div class="coupon-content">
+              <div class="coupon-brand">
+                <img src="corona.jpg" alt="Corona" width="60" height="60">
+              </div>
+              <div class="coupon-details">
+                <div class="new-tag">NOVO</div>
+                <h3>Leve 6, Pague 5</h3>
+                <p>Em Corona Long Neck</p>
+                <span class="coupon-expiry">Válido por 7 dias</span>
+                <span class="exclusiva" style="display:none">Exclusiva</span>
+              </div>
+            </div>
+            <div class="coupon-action">
+              <button class="use-coupon" onclick="location.href='cupom-corona.html'">USAR</button>
+            </div>
+          </div>
+  
+          <div class="coupon" data-category="cashback">
+            <div class="coupon-content">
+              <div class="coupon-brand">
+                <img src="patagonia.jpg" alt="Patagonia" width="60" height="60">
+              </div>
+              <div class="coupon-details">
+                <h3>5% Cashback</h3>
+                <p>Em Patagonia 600ml</p>
+                <span class="coupon-expiry">Válido por 5 dias</span>
+              </div>
+            </div>
+            <div class="coupon-action">
+              <button class="use-coupon" onclick="location.href='cupom-patagonia.html'">USAR</button>
+            </div>
+          </div>
+        </div>
+      </section>
 
         <!-- Seção de missões -->
-        <section class="promo-section missions-section" data-category="missions">
-            <div class="section-header">
-                <h2>Missões Ativas</h2>
+    <section class="promo-section missions-section" data-category="missions">
+        <div class="section-header">
+          <h2>Missões Ativas</h2>
+        </div>
+        <div class="missions-container">
+          <div class="mission-card">
+            <div class="mission-header">
+              <img src="stella.jpg" alt="Stella Artois" class="mission-brand" width="80" height="40">
+              <div class="mission-reward">
+                <i class="fas fa-gift" aria-hidden="true"></i>
+                <span>1 Stella Grátis</span>
+              </div>
             </div>
-            <div class="missions-container">
-                <div class="mission-card">
-                    <div class="mission-header">
-                        <img src="stella.jpg" alt="Stella Artois" class="mission-brand" width="80" height="40" data-original-src="stella.jpg" onerror="this.onerror=null; this.classList.add('error'); this.src='data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'80\' height=\'40\'%3E%3Crect width=\'80\' height=\'40\' fill=\'%23f2f2f2\'/%3E%3Ctext x=\'50%25\' y=\'50%25\' dominant-baseline=\'middle\' text-anchor=\'middle\' font-family=\'sans-serif\' font-size=\'10\' fill=\'%23888\'%3EStella Artois%3C/text%3E%3C/svg%3E';">
-                        <div class="mission-reward">
-                            <i class="fas fa-gift" aria-hidden="true"></i>
-                            <span>1 Stella Grátis</span>
-                        </div>
-                    </div>
-                    <div class="mission-body">
-                        <h3>Desafio Stella</h3>
-                        <p>Compre 5 Stella Artois em 30 dias</p>
-                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-fill" style="width: 60%"></div>
-                        </div>
-                        <div class="mission-progress">
-                            <span>3/5</span>
-                            <span>60% completo</span>
-                        </div>
-                    </div>
-                    <button class="mission-btn" onclick="location.href='missao-stella.html'">CONTINUAR</button>
-                </div>
-
-                <div class="mission-card">
-                    <div class="mission-header">
-                        <img src="spaten.jpg" alt="Spaten" class="mission-brand" width="80" height="40" data-original-src="spaten.jpg" onerror="this.onerror=null; this.classList.add('error'); this.src='data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'80\' height=\'40\'%3E%3Crect width=\'80\' height=\'40\' fill=\'%23f2f2f2\'/%3E%3Ctext x=\'50%25\' y=\'50%25\' dominant-baseline=\'middle\' text-anchor=\'middle\' font-family=\'sans-serif\' font-size=\'10\' fill=\'%23888\'%3ESpaten%3C/text%3E%3C/svg%3E';">
-                        <div class="mission-reward">
-                            <i class="fas fa-percent" aria-hidden="true"></i>
-                            <span>30% OFF</span>
-                        </div>
-                    </div>
-                    <div class="mission-body">
-                        <h3>Experimentador Spaten</h3>
-                        <p>Experimente 3 tipos de Spaten</p>
-                        <div class="progress-bar" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-fill" style="width: 33%"></div>
-                        </div>
-                        <div class="mission-progress">
-                            <span>1/3</span>
-                            <span>33% completo</span>
-                        </div>
-                    </div>
-                    <button class="mission-btn" onclick="location.href='missao-spaten.html'">CONTINUAR</button>
-                </div>
+            <div class="mission-body">
+              <h3>Desafio Stella</h3>
+              <p>Compre 5 Stella Artois em 30 dias</p>
+              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-fill" style="width: 60%"></div>
+              </div>
+              <div class="mission-progress">
+                <span>3/5</span>
+                <span>60% completo</span>
+              </div>
             </div>
-        </section>
-
-        <!-- Ofertas por perfil -->
-        <section class="promo-section" data-category="recommendation">
-            <div class="section-header">
-                <h2>Recomendado para Você</h2>
+            <button class="mission-btn" onclick="location.href='missao-stella.html'">CONTINUAR</button>
+          </div>
+  
+          <div class="mission-card">
+            <div class="mission-header">
+              <img src="spaten.jpg" alt="Spaten" class="mission-brand" width="80" height="40">
+              <div class="mission-reward">
+                <i class="fas fa-percent" aria-hidden="true"></i>
+                <span>30% OFF</span>
+              </div>
             </div>
-            <div class="profile-recommendations">
-                <div class="profile-badge">
-                    <div class="badge-icon">
-                        <i class="fas fa-star" aria-hidden="true"></i>
-                    </div>
-                    <span>Amante de IPA</span>
-                </div>
-                <div class="recommended-items">
-                    <div class="promo-item">
-                        <div class="discount-tag">20% OFF</div>
-                        <img src="colorado.jpg" alt="Colorado" class="promo-img" width="100" height="120" data-original-src="colorado.jpg" onerror="this.onerror=null; this.classList.add('error'); this.src='data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'100\' height=\'120\'%3E%3Crect width=\'100\' height=\'120\' fill=\'%23f2f2f2\'/%3E%3Ctext x=\'50%25\' y=\'50%25\' dominant-baseline=\'middle\' text-anchor=\'middle\' font-family=\'sans-serif\' font-size=\'10\' fill=\'%23888\'%3EColorado%3C/text%3E%3C/svg%3E';">
-                        <div class="promo-details">
-                            <h3>Colorado IPA</h3>
-                            <p class="promo-price">
-                                <span class="original-price">R$9,90</span>
-                                <span class="current-price">R$7,92</span>
-                            </p>
-                            <button class="add-to-cart">ADICIONAR</button>
-                        </div>
-                    </div>
-                    <div class="promo-item">
-                        <div class="discount-tag">15% OFF</div>
-                        <img src="patagonia.jpg" alt="Patagonia" class="promo-img" width="100" height="120" data-original-src="patagonia.jpg" onerror="this.onerror=null; this.classList.add('error'); this.src='data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'100\' height=\'120\'%3E%3Crect width=\'100\' height=\'120\' fill=\'%23f2f2f2\'/%3E%3Ctext x=\'50%25\' y=\'50%25\' dominant-baseline=\'middle\' text-anchor=\'middle\' font-family=\'sans-serif\' font-size=\'10\' fill=\'%23888\'%3EPatagonia%3C/text%3E%3C/svg%3E';">
-                        <div class="promo-details">
-                            <h3>Patagonia IPA</h3>
-                            <p class="promo-price">
-                                <span class="original-price">R$12,90</span>
-                                <span class="current-price">R$10,96</span>
-                            </p>
-                            <button class="add-to-cart">ADICIONAR</button>
-                        </div>
-                    </div>
-                </div>
+            <div class="mission-body">
+              <h3>Experimentador Spaten</h3>
+              <p>Experimente 3 tipos de Spaten</p>
+              <div class="progress-bar" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-fill" style="width: 33%"></div>
+              </div>
+              <div class="mission-progress">
+                <span>1/3</span>
+                <span>33% completo</span>
+              </div>
             </div>
-        </section>
+            <button class="mission-btn" onclick="location.href='missao-spaten.html'">CONTINUAR</button>
+          </div>
+        </div>
+      </section>
+  
+           <!-- Ofertas por perfil -->
+    <section class="promo-section" data-category="recommendation">
+        <div class="section-header">
+          <h2>Recomendado para Você</h2>
+        </div>
+        <div class="profile-recommendations">
+          <div class="profile-badge">
+            <div class="badge-icon">
+              <i class="fas fa-star" aria-hidden="true"></i>
+            </div>
+            <span>Amante de IPA</span>
+          </div>
+          <div class="recommended-items">
+            <div class="promo-item">
+              <div class="discount-tag">20% OFF</div>
+              <img src="colorado.jpg" alt="Colorado" class="promo-img" width="100" height="120">
+              <div class="promo-details">
+                <h3>Colorado IPA</h3>
+                <p class="promo-price">
+                  <span class="original-price">R$9,90</span>
+                  <span class="current-price">R$7,92</span>
+                </p>
+                <button class="add-to-cart" onclick="location.href='produto-colorado.html'">ADICIONAR</button>
+              </div>
+            </div>
+            <div class="promo-item">
+              <div class="discount-tag">15% OFF</div>
+              <img src="patagonia.jpg" alt="Patagonia" class="promo-img" width="100" height="120">
+              <div class="promo-details">
+                <h3>Patagonia IPA</h3>
+                <p class="promo-price">
+                  <span class="original-price">R$12,90</span>
+                  <span class="current-price">R$10,96</span>
+                </p>
+                <button class="add-to-cart" onclick="location.href='produto-patagonia.html'">ADICIONAR</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
         <!-- Ofertas por mercado -->
         <section class="promo-section" data-category="market">
