--- a/cupom-brahma.html
+++ b/cupom-brahma.html
@@ -4,15 +4,70 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cupom Brahma</title>
+  <title>Cupom Brahma - 20% OFF</title>
   <link rel="stylesheet" href="promocoes.css" />
+  <style>
+    .details-list {
+      background-color: #f9f9f9;
+      padding: 1.5rem;
+      border-radius: 10px;
+      margin-top: 1.5rem;
+      line-height: 1.6;
+    }
+
+    .details-list h3 {
+      margin-bottom: 1rem;
+      color: #c20000;
+    }
+
+    .details-list ul {
+      padding-left: 1.2rem;
+    }
+
+    .details-list li {
+      margin-bottom: 0.5rem;
+    }
+
+    .back-button {
+      margin-top: 2rem;
+    }
+  </style>
 </head>
 <body>
   <div class="app-container">
     <section class="promo-section">
-      <h2>Parabéns!</h2>
-      <p>Você ativou o cupom de 20% OFF em Brahma para todos os mercados.</p>
-      <button class="use-coupon" onclick="location.href='promocoes.html'">Voltar às Promoções</button>
+      <h2>🎉 Parabéns!</h2>
+      <p>Você ativou o <strong>cupom de 20% OFF</strong> em Brahma.</p>
+      
+      <div class="details-list">
+        <h3>🛒 Mercados Participantes:</h3>
+        <ul>
+          <li>Dom Atacadista (todas as unidades RJ)</li>
+          <li>Super Rede Econômica</li>
+          <li>Atacadão Rio</li>
+          <li>Mega Compras São Gonçalo</li>
+        </ul>
+
+        <h3>📍 Localização no Dom Atacadista:</h3>
+        <ul>
+          <li><strong>Corredor:</strong> 12 (Setor de Bebidas)</li>
+          <li><strong>Seção:</strong> Cervejas Lagers - Prateleira 3</li>
+        </ul>
+
+        <h3>🕐 Validade:</h3>
+        <ul>
+          <li>De <strong>23/04/2025</strong> até <strong>30/04/2025</strong></li>
+        </ul>
+
+        <h3>⚠️ Regras:</h3>
+        <ul>
+          <li>Limitado a 6 unidades por CPF.</li>
+          <li>Válido apenas para a linha Brahma Pilsen 350ml.</li>
+          <li>Não acumulativo com outras promoções.</li>
+        </ul>
+      </div>
+
+      <button class="use-coupon back-button" onclick="location.href='promocoes.html'">Voltar às Promoções</button>
     </section>
   </div>
 </body>
